[package]
authors = ["Marcel Ebert"]
edition = "2021"
name = "dex-primitives"
version = "1.2.0"

[dependencies]
bstringify = "0.1.2"
serde = { version = "1.0.130", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.26", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "xcm/std"
]
